--- a/ДИАГНОСТИКА.md
+++ b/ДИАГНОСТИКА.md
@@ -18,7 +18,7 @@ avatarsscript/
 
 Файл `accounts/accounts.txt` должен содержать:
 ```
-vcaox5993:wkxho8755:vcaox5993.maFile
+vcaox293:fsa1231235:vcaox523.maFile
 ```
 
 ### Проверьте аватарки:
